<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:id="@+id/relative"
    tools:context="com.picpick.MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#90ffffff"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:contentDescription="@string/test"
                android:src="@mipmap/ic_launcher"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/appThemeColor_transparent"
                    android:hint="@string/et_mobile"/>
            </android.support.design.widget.TextInputLayout>






            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/appThemeColor_transparent"
                android:background="@drawable/white_rounded_button"
                android:text="@string/btn_continue"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   android:layout_marginRight="5dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textColor="@color/appThemeColor_transparent"
                    android:text="@string/tv_already"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                  android:layout_marginLeft="5dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textColor="@color/appThemeColor"
                    android:text="@string/signin"/>



            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/grayColor"
                android:text="@string/tv_connect_with"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="100dp"
                    android:background="@drawable/bluefb_rounded_button"
                    android:textColor="@color/whiteColor"
                    android:text="@string/tv_facebook"
                    android:drawableLeft="@mipmap/fb"/>




            </LinearLayout>


        </LinearLayout>

    </LinearLayout>






</RelativeLayout>
