<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#90ffffff" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:contentDescription="@string/test"
                android:src="@mipmap/ic_launcher"
                android:id="@+id/imageView" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:hint="@string/et_username"
                    android:textColorHint="@color/appThemeColor_transparent" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout1"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:hint="@string/et_password"
                    android:textColorHint="@color/appThemeColor_transparent" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:gravity="right"
                android:text="@string/tv_forgot_password"
                android:textColor="@color/appThemeColor_transparent"
                android:textSize="18sp"
                android:textStyle="bold" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:visibility="invisible"
                android:background="@drawable/white_rounded_button"
                android:text="@string/signin"
                android:textColor="@color/appThemeColor_transparent"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/tv_connect_with"
                android:textColor="@color/grayColor"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/fblogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginRight="80dp"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:background="@drawable/bluefb_rounded_button"
                    android:drawableLeft="@mipmap/fb"
                    android:text="@string/tv_facebook"
                    android:textColor="@color/whiteColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />




            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
